Automatically setting title in yml

--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Course Title Here
+title: spreadsheets time series alex powers
 description: Course description goes here.
 programming_language: python
 from: python-base-prod:v1.0.2
